[metadata]
name = ks-affine-aligner
version = 0.1.0
author = Keisuke Sehara
author_email = keisuke.sehara@gmail.com
description = An OpenCV-based Python tool for alignment of (presumably clear-skull) images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/python-ks-affine-aligner
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/python-ks-affine-aligner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib
    opencv-python
    ks-affine2d

[flake8]
ignore =
    E501
    E221
    E712
